# Omega

./: CMakeLists.txt
Mixkpi/: CMakeLists.txt  Fit1.cpp  getpdf.cpp
include/: argparser.h
